k8s/components/apps/security/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: security
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: http
      protocol: TCP
      port: 8200
      targetPort: 8200
    - name: cluster
      protocol: TCP
      port: 8201
      targetPort: 8201
